group = 'pl.edu.agh.diskstalker'
version = '1.0'

repositories {
    mavenCentral()
}

apply plugin: 'java'
apply plugin: 'application'

application {
    applicationDefaultJvmArgs = ['--add-opens', 'java.base/java.lang=ALL-UNNAMED']
    mainClassName = 'pl.edu.agh.diskstalker.Main'
}

java {
    sourceCompatibility = JavaVersion.VERSION_15
    targetCompatibility = JavaVersion.VERSION_15
}

test {
    useJUnitPlatform()
}

dependencies {
    implementation 'org.xerial:sqlite-jdbc:3.8.11.2'
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.3.1'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.3.1'
}
